tenants/bookstack/bookstack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstack
    partOf: bookstack
  name: bookstack-frontend
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
        partOf: bookstack
    spec:
      containers:
        - env:
            - name: APP_URL
              value: https://bookstack.manhatten.uxn.nl
            - name: DB_DATABASE
              value: bookstackapp
            - name: DB_HOST
              value: bookstack-db-svc
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: mysql
                  key: password
            - name: DB_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: lscr.io/linuxserver/bookstack
          name: bookstacks
          ports:
            - containerPort: 80
          volumeMounts:
            - name: bookstack-frontend-storage
              mountPath: /config
      restartPolicy: Always
      volumes:
        - name: bookstack-frontend-storage
          persistentVolumeClaim:
            claimName: bookstack-storage
