tenants/bookstack/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
    partOf: bookstack
  name: bookstack-db
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      partOf: bookstack
  template:
    metadata:
      labels:
        app: mariadb
        partOf: bookstack
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: bookstackapp
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql
                  key: password
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-root
                  key: password
            - name: MYSQL_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: UTC
          image: lscr.io/linuxserver/mariadb
          name: bookstacks-db
          volumeMounts:
            - mountPath: /config
              name: bookstack-db-storage
      restartPolicy: Always
      volumes:
        - name: bookstack-db-storage
          persistentVolumeClaim:
            claimName: bookstack-db-storage
