tenants/bookstack/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: bookstack
    partOf: bookstack
  name: bookstack-svc
  namespace: bookstack
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: bookstack
    partOf: bookstack
---
apiVersion: v1
kind: Service
metadata:
  labels:
    partOf: bookstack
  name: bookstack-db-svc
  namespace: bookstack
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mariadb
    partOf: bookstack
